--- a/css/base/base.css
+++ b/css/base/base.css
@@ -6,14 +6,7 @@ body {
   height: 100%; }
 
 body {
-  font-family: "Gotham Pro", sans-serif; }
-
-ul {
-  padding: 0;
-  margin: 0; }
-
-ul li {
-  list-style: none; }
+  font-family: "Ubuntu", sans-serif; }
 
 *::-moz-selection {
   background-color: #f9b43b;
