--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,715 @@
 /* normalize */
-@import url('normalize.css');
-
+@import url(../css/normalize.css);
 /* variables, mixins */
-@import url('/css/utils/variables.css');
-
 /* layout setups */
-@import url('/css/base/fonts.css');
-@import url('/css/base/base.css');
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%; }
+
+body {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px; }
+
+*::-moz-selection {
+  background-color: #f9b43b;
+  color: #ffffff; }
+
+*::selection {
+  background-color: #f9b43b;
+  color: #ffffff; }
+
+.wrapper {
+  overflow: hidden;
+  width: 100%;
+  min-width: 1100px;
+  margin: 0 auto; }
+
+.section {
+  background-position: top center;
+  background-size: cover;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.buy-button {
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 13px;
+  text-transform: uppercase;
+  padding: 11px 15px;
+  text-decoration: none;
+  background-color: #e45028;
+  border-radius: 4px;
+  -webkit-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border: none; }
+
+.buy-button:hover {
+  background-color: #c1401e; }
+
+.anchor-pagintaion {
+  position: fixed;
+  z-index: 200;
+  top: 90px;
+  right: 4.5%; }
+
+.anchor-pagintaion__list {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.anchor-pagintaion__link {
+  font-size: 0px;
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  background-color: #ffffff; }
+  .anchor-pagintaion__link::after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    border-radius: 100%;
+    position: absolute;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    top: 3px;
+    left: 3px;
+    opacity: 0;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+    transition-duration: 0.4s; }
+
+.anchor-pagintaion__link--active {
+  position: relative; }
+  .anchor-pagintaion__link--active::after {
+    opacity: 1; }
+
+.anchor-pagintaion__link:hover::after {
+  opacity: 1; }
+
+@font-face {
+  font-family: 'Lifehack';
+  src: url("/fonts/Lifehack-Medium.eot");
+  src: url("/fonts/Lifehack-Medium.eot?#iefix") format("embedded-opentype"), url("/fonts/Lifehack-Medium.woff2") format("woff2"), url("/fonts/Lifehack-Medium.woff") format("woff"), url("/fonts/Lifehack-Medium.ttf") format("truetype"), url("/fonts/Lifehack-Medium.svg#Lifehack-Medium") format("svg");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Gagalin';
+  src: url("/fonts/Gagalin-Regular.eot");
+  src: url("/fonts/Gagalin-Regular.eot?#iefix") format("embedded-opentype"), url("/fonts/Gagalin-Regular.woff2") format("woff2"), url("/fonts/Gagalin-Regular.woff") format("woff"), url("/fonts/Gagalin-Regular.ttf") format("truetype"), url("/fonts/Gagalin-Regular.svg#Gagalin-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url("/fonts/Ubuntu-Light.eot");
+  src: url("/fonts/Ubuntu-Light.eot?#iefix") format("embedded-opentype"), url("/fonts/Ubuntu-Light.woff2") format("woff2"), url("/fonts/Ubuntu-Light.woff") format("woff"), url("/fonts/Ubuntu-Light.ttf") format("truetype"), url("/fonts/Ubuntu-Light.svg#Ubuntu-Light") format("svg");
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url("/fonts/Ubuntu-Medium.eot");
+  src: url("/fonts/Ubuntu-Medium.eot?#iefix") format("embedded-opentype"), url("/fonts/Ubuntu-Medium.woff2") format("woff2"), url("/fonts/Ubuntu-Medium.woff") format("woff"), url("/fonts/Ubuntu-Medium.ttf") format("truetype"), url("/fonts/Ubuntu-Medium.svg#Ubuntu-Medium") format("svg");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url("/fonts/Ubuntu.eot");
+  src: url("/fonts/Ubuntu.eot?#iefix") format("embedded-opentype"), url("/fonts/Ubuntu.woff2") format("woff2"), url("/fonts/Ubuntu.woff") format("woff"), url("/fonts/Ubuntu.ttf") format("truetype"), url("/fonts/Ubuntu.svg#Ubuntu") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url("/fonts/Ubuntu-Bold.eot");
+  src: url("/fonts/Ubuntu-Bold.eot?#iefix") format("embedded-opentype"), url("/fonts/Ubuntu-Bold.woff2") format("woff2"), url("/fonts/Ubuntu-Bold.woff") format("woff"), url("/fonts/Ubuntu-Bold.ttf") format("truetype"), url("/fonts/Ubuntu-Bold.svg#Ubuntu-Bold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
 
 /* sections */
-@import url('/css/sections/intro.css');
+.intro {
+  background-image: url("/images/intro-bg.png"); }
+
+.intro-container {
+  max-width: 940px;
+  padding: 0 80px;
+  margin: 0 auto;
+  position: relative;
+  min-height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.header {
+  position: relative;
+  padding-top: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.logo {
+  width: 92px;
+  height: 69px; }
+
+.logo--intro {
+  margin-right: 15px; }
+
+.header__nav {
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-line-pack: center;
+  align-content: center; }
+
+.header__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 0;
+  text-align: right; }
+
+.header__list-item {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 13px;
+  text-transform: uppercase;
+  display: inline-block;
+  position: relative; }
+  .header__list-item::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    border-radius: 100%;
+    background-color: #ffffff;
+    right: -2px;
+    bottom: 9px; }
+  .header__list-item:last-child::after {
+    display: none; }
+
+.header__link {
+  display: inline-block;
+  text-decoration: none;
+  color: #ffffff;
+  padding: 5px 15px;
+  position: relative; }
+
+.intro__visual {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1; }
+
+.intro__picture {
+  width: 451px;
+  height: 424px;
+  margin-right: 10px; }
+
+.intro__title {
+  color: #f9b43b;
+  font-family: "Gagalin", sans-serif;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 85px;
+  margin: 0;
+  margin-top: 130px; }
+
+.intro__title--lettering {
+  display: block;
+  font-size: 65px;
+  color: #ffffff;
+  line-height: 85px;
+  font-family: "Lifehack";
+  font-weight: 500; }
+
+.intro__control-down {
+  font-size: 0px;
+  display: block;
+  width: 30px;
+  height: 20px;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 95px; }
+  .intro__control-down::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 2px;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    background-color: #ffffff;
+    bottom: 5px; }
+  .intro__control-down::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 2px;
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    background-color: #ffffff;
+    left: 13px;
+    bottom: 5px; }
+
+.features {
+  background-image: url("/images/features-bg.png"); }
+
+.features-container {
+  max-width: 940px;
+  padding: 0 80px;
+  margin: 0 auto;
+  position: relative;
+  min-height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.features__title {
+  color: #2f3234;
+  font-family: "Gagalin", sans-serif;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 64px;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 55px; }
+
+.features__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  text-align: center;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start; }
+
+.features__list-item {
+  padding-top: 120px;
+  margin-right: 3.65%;
+  -ms-flex-preferred-size: 280px;
+  flex-basis: 280px;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1; }
+  .features__list-item:last-child {
+    margin-right: 0; }
+  .features__list-item:nth-child(1) {
+    background-image: url("/images/icons/meat.svg");
+    background-repeat: no-repeat;
+    background-position: top center; }
+  .features__list-item:nth-child(2) {
+    background-image: url("/images/icons/hand.svg");
+    background-repeat: no-repeat;
+    background-position: top center; }
+  .features__list-item:nth-child(3) {
+    background-image: url("/images/icons/natural.svg");
+    background-repeat: no-repeat;
+    background-position: top center; }
+
+.features__description {
+  color: #2f3234;
+  font-family: "Lifehack", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px; }
+
+.features__info {
+  margin: 0;
+  color: rgba(47, 50, 52, 0.8);
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  margin-top: 20px; }
+
+.reviews {
+  min-height: 100vh;
+  background-color: #2f3234; }
+
+.reviews-container {
+  margin: 0 auto;
+  height: 100vh;
+  min-height: 650px;
+  width: 100%; }
+
+.reviews__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.reviews__item {
+  -ms-flex-preferred-size: 25%;
+  flex-basis: 25%;
+  height: 50vh;
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; }
+  .reviews__item::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(20, 20, 20, 0.7);
+    opacity: 0;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s; }
+  .reviews__item:hover::after {
+    opacity: 1; }
+  .reviews__item:nth-child(1) {
+    background-image: url("/images/authors/author-1.png"); }
+  .reviews__item:nth-child(2) {
+    background-image: url("/images/authors/author-2.png"); }
+  .reviews__item:nth-child(3) {
+    background-image: url("/images/authors/author-3.png"); }
+  .reviews__item:nth-child(4) {
+    background-image: url("/images/authors/author-4.png"); }
+  .reviews__item:nth-child(5) {
+    background-image: url("/images/authors/author-5.png"); }
+  .reviews__item:nth-child(6) {
+    background-image: url("/images/authors/author-6.png"); }
+  .reviews__item:nth-child(7) {
+    background-image: url("/images/authors/author-7.png"); }
+  .reviews__item:nth-child(8) {
+    background-image: url("/images/authors/author-8.png"); }
+
+.reviews__avatar {
+  display: block;
+  width: 100%; }
+
+.reviews__preview {
+  opacity: 0;
+  z-index: 10;
+  width: 80%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  -webkit-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+.reviews__item:hover > .reviews__preview {
+  opacity: 1; }
+
+.reviews__autor-name {
+  color: #ffffff;
+  font-family: "Gagalin", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28px; }
+
+.reviews__info {
+  color: #ffffff;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.buy-button--more {
+  background-color: #2f3234; }
+  .buy-button--more:hover {
+    background-color: #1f2122; }
+
+.buy {
+  background-image: url("/images/buy-bg.jpg"); }
+
+.buy-container {
+  max-width: 940px;
+  padding: 0 80px;
+  margin: 0 auto;
+  min-height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.buy__title {
+  color: #f9b43b;
+  font-family: "Gagalin", sans-serif;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 1;
+  margin: 0;
+  margin-bottom: 40px; }
+
+.buy__forms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.buy__left-forms {
+  -ms-flex-preferred-size: 50%;
+  flex-basis: 50%;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  margin-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  height: 205px; }
+
+.buy__right-forms {
+  -ms-flex-preferred-size: 50%;
+  flex-basis: 50%;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  height: 260px; }
+
+.buy__form-line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap; }
+
+.buy__label {
+  color: #ffffff;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1;
+  display: block;
+  margin-bottom: 7px; }
+
+.buy__input {
+  display: block;
+  background-color: #ffffff;
+  border: 1px solid #d1cfcb;
+  border-radius: 5px;
+  height: 35px;
+  padding: 10px;
+  outline: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%; }
+  .buy__input:focus {
+    border: 2px solid #f9b43b; }
+
+.buy__input--textarea {
+  height: 110px; }
+
+.buy__left-forms .buy__form-line:nth-child(2) .buy__form-element {
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%; }
+
+.buy__left-forms .buy__form-line:nth-child(3) .buy__form-element {
+  -ms-flex-preferred-size: 25%;
+  flex-basis: 25%;
+  margin-right: 20px; }
+  .buy__left-forms .buy__form-line:nth-child(3) .buy__form-element:last-child {
+    margin-right: 0; }
+
+.buy__right-forms .buy__form-line:nth-child(1) .buy__form-element {
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%; }
+
+.buy__radio {
+  display: none; }
+
+.buy__label-radio {
+  color: #ffffff;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1;
+  cursor: pointer;
+  margin-right: 25px; }
+  .buy__label-radio:last-child {
+    margin-right: 0; }
+  .buy__label-radio::before {
+    content: "";
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    background-color: #ffffff;
+    border-radius: 100%;
+    border: 4px solid #ffffff;
+    position: relative;
+    top: 3px;
+    margin-right: 10px; }
+
+.buy__radio:checked + .buy__label-radio::before {
+  background-color: #e35028; }
+
+.buy__checkbox {
+  display: none; }
+
+.buy__label-checkbox {
+  color: #ffffff;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1;
+  cursor: pointer; }
+  .buy__label-checkbox::before {
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background-color: #ffffff;
+    border-radius: 1px;
+    position: relative;
+    top: 3px;
+    margin-right: 10px; }
+
+.buy__checkbox:checked + .buy__label-checkbox::before {
+  background-image: url("/images/checkbox.png");
+  background-size: 11px 9px;
+  background-position: center center;
+  background-repeat: no-repeat; }
+
+.buy-button--margin-right {
+  margin-right: 17px; }
+
+.buy__reset {
+  color: #ffffff;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1;
+  background-color: transparent;
+  border: none; }
+
+/*# sourceMappingURL=main.css.map */
