--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -8,9 +8,98 @@ body {
 
 body {
   font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
 }
 
 *::selection {
   background-color: #f9b43b;
   color: #ffffff;
+}
+
+.wrapper {
+  overflow: hidden;
+  width: 100%;
+  min-width: 1100px;
+  margin: 0 auto;
+}
+
+.section {
+  background-position: top center;
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buy-button {
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 13px;
+  text-transform: uppercase;
+  padding: 11px 15px;
+  text-decoration: none;
+  background-color: #e45028;
+  border-radius: 4px;
+  transition-property: all;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border: none;
+}
+
+.buy-button:hover {
+  background-color: #c1401e;
+}
+
+
+.anchor-pagintaion {
+  position: fixed;
+  z-index: 200;
+  top: 90px;
+  right: 4.5%;
+}
+
+.anchor-pagintaion__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.anchor-pagintaion__link {
+  font-size: 0px;
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  background-color: #ffffff;
+  &::after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    border-radius: 100%;
+    position: absolute;
+    transform: translateX(-50%) translateY(-50%);
+    top: 3px;
+    left: 3px;
+    opacity: 0;
+    transition-property: all;
+    transition-duration: 0.4s;
+  }
+}
+
+.anchor-pagintaion__link--active {
+  position: relative;
+  &::after {
+    opacity: 1;
+  }
+}
+
+.anchor-pagintaion__link:hover::after {
+  opacity: 1;
 }
