Добавил бургер-меню, поправил ошибки по вёрстке

--- a/css/main.css
+++ b/css/main.css
@@ -32,14 +32,15 @@ body {
 .section {
   background-position: top center;
   background-size: cover;
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 650px;
   display: flex;
   justify-content: center;
   align-items: center; }
 
 .container {
-  width: 940px;
-  padding: 0 80px;
+  max-width: 940px;
+  padding: 0 8%;
   margin: 0 auto;
   position: relative;
   min-height: 650px;
@@ -49,12 +50,12 @@ body {
   align-items: center; }
   @media (max-width: 768px) {
     .container {
-      width: 708px;
-      padding: 0 30px; } }
+      max-width: 708px;
+      padding: 0 4%; } }
   @media (max-width: 480px) {
     .container {
-      width: 440px;
-      padding: 0 20px; } }
+      max-width: 440px;
+      padding: 0 4.5%; } }
 
 .logo {
   width: 92px;
@@ -234,7 +235,37 @@ body {
     .intro__visual {
       flex-direction: column;
       align-items: center;
-      width: 60%; } }
+      width: 75%; } }
+
+.header__hambmenu-btn {
+  width: 24px;
+  height: 22px;
+  cursor: pointer;
+  display: block;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  margin-left: 30px;
+  border: none;
+  position: relative;
+  display: none; }
+  @media (max-width: 768px) {
+    .header__hambmenu-btn {
+      display: block; } }
+
+.header__hambmenu-btn-lines {
+  width: 24px;
+  height: 4px;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #ffffff;
+  border-radius: 100px;
+  box-shadow: 0 9px 0 0 #ffffff, 0 18px 0 0 #ffffff; }
 
 .intro__picture {
   width: 451px;
@@ -273,8 +304,8 @@ body {
   height: 20px;
   position: relative;
   margin: 0 auto;
-  margin-top: 80px;
-  margin-bottom: 30px; }
+  margin-top: 25px;
+  margin-bottom: 25px; }
   .intro__control-down svg {
     width: 30px;
     height: 20px;
@@ -283,6 +314,108 @@ body {
     transition-duration: 0.5s; }
     .intro__control-down svg:hover {
       fill: #f9b43b; }
+
+.hambmenu {
+  background-color: #2f3234;
+  align-items: flex-start;
+  overflow: hidden;
+  z-index: 10000;
+  display: none;
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 0.6s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0; }
+
+.container--hambmenu {
+  min-width: 708px; }
+  @media (max-width: 480px) {
+    .container--hambmenu {
+      min-width: 440px; } }
+
+.hambmenu__header {
+  padding-top: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: auto; }
+
+.hambmenu__close-btn {
+  position: relative;
+  cursor: pointer;
+  display: block;
+  background-color: transparent;
+  width: 18px;
+  height: 18px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  text-align: center;
+  color: #ffffff; }
+  .hambmenu__close-btn::before {
+    position: absolute;
+    content: "";
+    display: block;
+    background-color: #c1c2c2;
+    width: 23px;
+    height: 3px;
+    border-radius: 10px;
+    transform: rotate(45deg); }
+  .hambmenu__close-btn::after {
+    position: absolute;
+    content: "";
+    display: block;
+    background-color: #c1c2c2;
+    width: 23px;
+    height: 3px;
+    border-radius: 10px;
+    transform: rotate(-45deg); }
+
+.hambmenu__nav {
+  margin-top: 180px; }
+  @media (max-width: 480px) {
+    .hambmenu__nav {
+      margin-top: 100px; } }
+
+.hambmenu__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 24px;
+  line-height: 1;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: normal; }
+
+.hambmenu__list-item {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  padding-bottom: 30px;
+  margin-bottom: 23px;
+  position: relative; }
+  .hambmenu__list-item::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 7px;
+    height: 7px;
+    border-radius: 100%;
+    background-color: #c1c2c2; }
+  .hambmenu__list-item:last-child {
+    padding: 0;
+    margin: 0; }
+    .hambmenu__list-item:last-child::after {
+      display: none; }
+
+.hambmenu__link {
+  color: #c1c2c2;
+  text-decoration: none; }
 
 .features {
   background-image: url("/images/features-bg.png"); }
@@ -471,10 +604,17 @@ body {
   background-color: #f08c33;
   border-radius: 5px;
   transition-property: all;
-  transition-duration: 0.5s; }
-  .products__ingridients-button:hover {
+  transition-duration: 0.5s;
+  cursor: pointer;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  text-align: center;
+  color: #ffffff; }
+  .products__ingridients-button:hover, .products__ingridients-button:active {
     background-color: #e35028; }
-    .products__ingridients-button:hover + .products__ingridients-list {
+    .products__ingridients-button:hover + .products__ingridients-list, .products__ingridients-button:active + .products__ingridients-list {
       opacity: 1; }
   @media (max-width: 768px) {
     .products__ingridients-button {
@@ -629,7 +769,17 @@ body {
 
 .team__name {
   position: relative;
-  cursor: pointer; }
+  cursor: pointer;
+  display: block;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  text-align: left;
+  color: #ffffff;
+  transition-property: all;
+  transition-duration: 0.5s; }
   .team__name::before {
     content: "";
     width: 0;
@@ -640,7 +790,9 @@ body {
     border-top: 5px solid #f9b43b;
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
-    margin-right: 10px; }
+    margin-right: 10px;
+    transition-property: all;
+    transition-duration: 0.5s; }
   @media (max-width: 768px) {
     .team__name {
       text-align: center; } }
@@ -653,18 +805,21 @@ body {
     border-bottom: 5px solid #f9b43b;
     border-right: 5px solid transparent;
     border-left: 5px solid transparent; }
-  .team__name--active + .team__people-decription {
-    height: auto; }
 
 .team__people-decription {
   height: 0;
   overflow: hidden;
-  margin-top: 15px; }
+  margin-top: 15px;
+  transition-property: all;
+  transition-duration: 0.5s; }
   @media (max-width: 768px) {
     .team__people-decription {
       display: flex;
       flex-direction: column;
       align-items: center; } }
+
+.team__name--active + .team__people-decription {
+  height: auto; }
 
 .team__avatar {
   display: inline-block;
@@ -757,7 +912,16 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  cursor: pointer; }
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  color: #ffffff;
+  font-family: "Gagalin", sans-serif;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1; }
   .menu__cover--meat {
     background-image: url("/images/for-meat-bg.jpg"); }
   .menu__cover--vegan {
@@ -772,6 +936,9 @@ body {
     @media (max-width: 768px) {
       .menu__cover--active + .menu__description {
         width: 500px; } }
+    @media (max-width: 768px) {
+      .menu__cover--active + .menu__description {
+        width: 400px; } }
 
 .menu__type-title {
   text-align: center;
@@ -820,10 +987,7 @@ body {
   flex-basis: 25%;
   height: 50vh;
   position: relative;
-  flex-grow: 1;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center; }
+  flex-grow: 1; }
   @media (max-width: 768px) {
     .reviews__item {
       flex-basis: 50%;
@@ -842,26 +1006,16 @@ body {
     transition-duration: 0.3s; }
   .reviews__item:hover::after {
     opacity: 1; }
-  .reviews__item:nth-child(1) {
-    background-image: url("/images/authors/author-1.png"); }
-  .reviews__item:nth-child(2) {
-    background-image: url("/images/authors/author-2.png"); }
-  .reviews__item:nth-child(3) {
-    background-image: url("/images/authors/author-3.png"); }
-  .reviews__item:nth-child(4) {
-    background-image: url("/images/authors/author-4.png"); }
-  .reviews__item:nth-child(5) {
-    background-image: url("/images/authors/author-5.png"); }
-  .reviews__item:nth-child(6) {
-    background-image: url("/images/authors/author-6.png"); }
-  .reviews__item:nth-child(7) {
-    background-image: url("/images/authors/author-7.png"); }
-  .reviews__item:nth-child(8) {
-    background-image: url("/images/authors/author-8.png"); }
 
 .reviews__avatar {
   display: block;
-  width: 100%; }
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  filter: grayscale(100%); }
+  @media (max-width: 768px) {
+    .reviews__avatar {
+      height: 25vh; } }
 
 .reviews__preview {
   opacity: 0;
@@ -884,6 +1038,7 @@ body {
   color: #ffffff;
   font-family: "Gagalin", sans-serif;
   font-size: 14px;
+  margin: 0;
   font-weight: 400;
   line-height: 1.2; }
   @media (max-width: 480px) {
