--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 
 /* sections */
 @import "../scss/sections/intro.scss";
+@import "../scss/sections/hambmenu.scss";
 @import "../scss/sections/features.scss";
 @import "../scss/sections/products.scss";
 @import "../scss/sections/team.scss";
