--- a/scss/sections/reviews.scss
+++ b/scss/sections/reviews.scss
@@ -25,13 +25,12 @@
   height: 50vh;
   position: relative;
   flex-grow: 1;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+
   @include tablets {
     flex-basis: 50%;
     height: 25vh;
   }
+
   &::after {
     content: "";
     display: block;
@@ -48,35 +47,18 @@
   &:hover::after {
     opacity: 1;
   }
-  &:nth-child(1) {
-    background-image: url("/images/authors/author-1.png");
-  }
-  &:nth-child(2) {
-    background-image: url("/images/authors/author-2.png");
-  }
-  &:nth-child(3) {
-    background-image: url("/images/authors/author-3.png");
-  }
-  &:nth-child(4) {
-    background-image: url("/images/authors/author-4.png");
-  }
-  &:nth-child(5) {
-    background-image: url("/images/authors/author-5.png");
-  }
-  &:nth-child(6) {
-    background-image: url("/images/authors/author-6.png");
-  }
-  &:nth-child(7) {
-    background-image: url("/images/authors/author-7.png");
-  }
-  &:nth-child(8) {
-    background-image: url("/images/authors/author-8.png");
-  }
 }
 
 .reviews__avatar {
   display: block;
   width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  filter: grayscale(100%);
+
+  @include tablets {
+    height: 25vh;
+  }
 }
 
 .reviews__preview {
@@ -103,6 +85,7 @@
   color: #ffffff;
   font-family: "Gagalin", sans-serif;
   font-size: 14px;
+  margin: 0;
   font-weight: 400;
   line-height: 1.2;
 
