--- a/scss/sections/team.scss
+++ b/scss/sections/team.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   @include tablets {
     margin-left: 0;
     width: 100%;
@@ -21,7 +20,6 @@
 .team__content-wrapper {
   display: flex;
   flex-direction: column;
-
   @include tablets {
     align-items: center;
   }
@@ -43,7 +41,6 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-
   @include tablets {
     align-items: center;
   }
@@ -56,7 +53,6 @@
   font-weight: 400;
   line-height: 1.2;
   margin-bottom: 30px;
-
   &:last-child {
     margin-bottom: 0;
   }
@@ -65,7 +61,16 @@
 .team__name {
   position: relative;
   cursor: pointer;
-
+  display: block;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  text-align: left;
+  color: #ffffff;
+  transition-property: all;
+  transition-duration: 0.5s;
   &::before {
     content: "";
     width: 0;
@@ -77,8 +82,9 @@
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
     margin-right: 10px;
+    transition-property: all;
+    transition-duration: 0.5s;
   }
-
   @include tablets {
     text-align: center;
   }
@@ -93,21 +99,24 @@
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
   }
-  &+.team__people-decription {
-    height: auto;
-  }
 }
 
 .team__people-decription {
   height: 0;
   overflow: hidden;
   margin-top: 15px;
+  transition-property: all;
+    transition-duration: 0.5s;
 
   @include tablets {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+}
+
+.team__name--active + .team__people-decription {
+  height: auto;
 }
 
 .team__avatar {
@@ -117,9 +126,8 @@
   border-radius: 100%;
   margin-right: 20px;
   margin-left: 20px;
-
   @include tablets {
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
   }
 }
 
@@ -127,7 +135,6 @@
   display: inline-block;
   max-width: 210px;
   vertical-align: top;
-
   @include tablets {
     text-align: center;
   }
