--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,3 +19,4 @@
 @import "../scss/sections/reviews.scss";
 @import "../scss/sections/buy.scss";
 @import "../scss/sections/footer.scss";
+@import "../scss/sections/review-popup.scss";
