maps, modal, ajax

--- a/scss/sections/footer.scss
+++ b/scss/sections/footer.scss
@@ -10,6 +10,15 @@
   width: 100%;
 }
 
+.footer__map-desc {
+  color: #e45028;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  font-style: normal;
+  line-height: 1.5;
+}
+
 .footer__main-footer {
   background-color: #121212;
   bottom: 0;
