--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,11 @@ body {
 .anchor-pagintaion__link:hover::after {
   opacity: 1; }
 
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
 @font-face {
   font-family: 'Lifehack';
   src: url("/fonts/Lifehack-Medium.eot");
@@ -501,10 +506,23 @@ body {
   background-image: linear-gradient(to top, #f9b43b 0%, #eb8c38 50%, #f9b43b 75%, #f9b43b 100%); }
 
 .container--products-section {
-  flex-direction: row; }
+  flex-direction: row;
+  overflow: hidden; }
   @media (max-width: 768px) {
     .container--products-section {
       flex-direction: column; } }
+
+.products__slider {
+  display: flex;
+  justify-content: flex-start;
+  overflow: hidden; }
+
+.products__slider-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 100%; }
 
 .products__image-container {
   width: 60%;
@@ -1153,6 +1171,9 @@ body {
 .buy__input--textarea {
   height: 110px; }
 
+.buy__form-element {
+  position: relative; }
+
 .buy__left-forms .buy__form-line:nth-child(1) .buy__form-element {
   flex-basis: 50%;
   margin-right: 20px; }
@@ -1265,6 +1286,61 @@ body {
   background-color: transparent;
   border: none; }
 
+.buy__validate-message {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(120%);
+  font-size: 16px;
+  color: #d1cfcb;
+  background-color: #e35028;
+  border-radius: 5px;
+  width: 100%;
+  line-height: 1.5; }
+
+.buy-modal {
+  background-color: rgba(47, 50, 52, 0.9);
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  transition-property: all;
+  transition-duration: 0.6s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 0.6s; }
+
+.buy-modal__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border-radius: 5px;
+  min-width: 160px;
+  min-height: 66px;
+  padding: 20px; }
+
+.buy-modal__text {
+  display: block;
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  color: #2f3234;
+  line-height: 1.2;
+  text-align: center; }
+
 .footer {
   position: relative;
   flex-direction: column;
@@ -1274,6 +1350,14 @@ body {
 .footer__map {
   height: 100%;
   width: 100%; }
+
+.footer__map-desc {
+  color: #e45028;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  font-style: normal;
+  line-height: 1.5; }
 
 .footer__main-footer {
   background-color: #121212;
