--- a/scss/sections/buy.scss
+++ b/scss/sections/buy.scss
@@ -90,6 +90,10 @@
   height: 110px;
 }
 
+.buy__form-element {
+  position: relative;
+}
+
 .buy__left-forms .buy__form-line:nth-child(1) {
   .buy__form-element {
     flex-basis: 50%;
@@ -238,3 +242,66 @@
   background-color: transparent;
   border: none;
 }
+
+.buy__validate-message {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(120%);
+  font-size: 16px;
+  color: #d1cfcb;
+  background-color: #e35028;
+  border-radius: 5px;
+  width: 100%;
+  line-height: 1.5;
+}
+
+// modal:
+
+.buy-modal {
+  background-color: rgba(47, 50, 52, 0.9);
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  transition-property: all;
+  transition-duration: 0.6s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 0.6s;
+}
+
+.buy-modal__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border-radius: 5px;
+  min-width: 160px;
+  min-height: 66px;
+  padding: 20px;
+}
+
+.buy-modal__text {
+  display: block;
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  color: #2f3234;
+  line-height: 1.2;
+  text-align: center;
+}
+
+
