ajax, slider, modal

--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -34,8 +34,7 @@ body {
 .section {
   background-position: top center;
   background-size: cover;
-  height: 100vh;
-  min-height: 650px;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
