--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,7 @@ body {
 .section {
   background-position: top center;
   background-size: cover;
-  height: 100vh;
-  min-height: 650px;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -175,7 +174,6 @@ ul, li {
   background-image: url("/images/intro-bg.png"); }
 
 .container--intro {
-  min-height: 100vh;
   justify-content: space-between; }
 
 .header {
@@ -506,23 +504,32 @@ ul, li {
   background-image: linear-gradient(to top, #f9b43b 0%, #eb8c38 50%, #f9b43b 75%, #f9b43b 100%); }
 
 .container--products-section {
-  flex-direction: row;
-  overflow: hidden; }
+  flex-direction: row; }
   @media (max-width: 768px) {
     .container--products-section {
       flex-direction: column; } }
 
 .products__slider {
+  position: relative;
   display: flex;
   justify-content: flex-start;
+  width: 792px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  right: 0;
   overflow: hidden; }
+  @media (max-width: 768px) {
+    .products__slider {
+      width: 328px; } }
 
 .products__slider-item {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  flex-basis: 100%; }
+  align-items: center; }
+  @media (max-width: 768px) {
+    .products__slider-item {
+      flex-direction: column; } }
 
 .products__image-container {
   width: 60%;
@@ -594,24 +601,24 @@ ul, li {
   cursor: pointer;
   border: none;
   position: absolute;
-  top: 0;
-  bottom: 0; }
+  top: 50%;
+  transform: translateY(-50%); }
   .products__control svg {
     width: 27px;
     height: 13px;
     fill: #ffffff; }
   .products__control--left {
-    left: 40px;
+    left: -40px;
     transform: rotate(90deg); }
     @media (max-width: 480px) {
       .products__control--left {
-        left: 10px; } }
+        left: -10px; } }
   .products__control--right {
-    right: 40px;
+    right: -40px;
     transform: rotate(-90deg); }
     @media (max-width: 480px) {
       .products__control--right {
-        right: 10px; } }
+        right: -10px; } }
 
 .products__ingridients-button {
   position: absolute;
@@ -738,7 +745,7 @@ ul, li {
 .team__content {
   background-color: rgba(47, 50, 52, 0.9);
   width: 50%;
-  min-height: 100vh;
+  min-height: 100%;
   margin-left: 50%;
   display: flex;
   flex-direction: column;
@@ -925,7 +932,7 @@ ul, li {
 
 .menu__cover {
   width: 80px;
-  height: 100vh;
+  height: 100%;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -965,10 +972,10 @@ ul, li {
 
 .menu__type-title {
   text-align: center;
-  width: 100vh;
   transform: rotate(-90deg);
   position: absolute;
-  margin: auto; }
+  margin: auto;
+  width: 400px; }
 
 .menu__description {
   width: 0;
@@ -979,7 +986,7 @@ ul, li {
   font-size: 14px;
   font-weight: 300;
   line-height: 1.7;
-  height: 100vh;
+  height: 100%;
   transition-property: all;
   transition-duration: 0.5s; }
 
@@ -990,12 +997,11 @@ ul, li {
   margin: 0; }
 
 .reviews {
-  min-height: 100vh;
   background-color: #2f3234; }
 
 .reviews-container {
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   min-height: 650px;
   width: 100%; }
 
@@ -1010,13 +1016,13 @@ ul, li {
 
 .reviews__item {
   flex-basis: 25%;
-  height: 50vh;
+  height: 50%;
   position: relative;
   flex-grow: 1; }
   @media (max-width: 768px) {
     .reviews__item {
       flex-basis: 50%;
-      height: 25vh;
+      height: 25%;
       text-align: center; } }
   .reviews__item::after {
     content: "";
@@ -1036,12 +1042,12 @@ ul, li {
 .reviews__avatar {
   display: block;
   width: 100%;
-  height: 50vh;
+  height: 50%;
   object-fit: cover;
   filter: grayscale(100%); }
   @media (max-width: 768px) {
     .reviews__avatar {
-      height: 25vh; } }
+      height: 25%; } }
 
 .reviews__preview {
   opacity: 0;
@@ -1348,8 +1354,8 @@ ul, li {
   align-items: center; }
 
 .footer__map {
-  height: 100%;
-  width: 100%; }
+  width: 100%;
+  flex-grow: 1; }
 
 .footer__map-desc {
   color: #e45028;
