--- a/scss/sections/reviews.scss
+++ b/scss/sections/reviews.scss
@@ -1,11 +1,10 @@
 .reviews {
-  min-height: 100vh;
   background-color: #2f3234;
 }
 
 .reviews-container {
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   min-height: 650px;
   width: 100%;
 }
@@ -22,13 +21,13 @@
 
 .reviews__item {
   flex-basis: 25%;
-  height: 50vh;
+  height: 50%;
   position: relative;
   flex-grow: 1;
 
   @include tablets {
     flex-basis: 50%;
-    height: 25vh;
+    height: 25%;
     text-align: center;
   }
 
@@ -53,12 +52,12 @@
 .reviews__avatar {
   display: block;
   width: 100%;
-  height: 50vh;
+  height: 50%;
   object-fit: cover;
   filter: grayscale(100%);
 
   @include tablets {
-    height: 25vh;
+    height: 25%;
   }
 }
 
