--- a/scss/sections/team.scss
+++ b/scss/sections/team.scss
@@ -5,7 +5,7 @@
 .team__content {
   background-color: rgba(47, 50, 52, 0.9);
   width: 50%;
-  min-height: 100vh;
+  min-height: 100%;
   margin-left: 50%;
   display: flex;
   flex-direction: column;
