Исправил пути относительно build

--- a/src/scss/sections/products.scss
+++ b/src/scss/sections/products.scss
@@ -187,7 +187,7 @@
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   padding-top: 55px;
-  background-image: url("/images/icons/burger.svg");
+  background-image: url("./images/icons/burger.svg");
   background-size: 46px;
   background-repeat: no-repeat;
   background-position: top center;
@@ -245,7 +245,7 @@
   left: 80px;
   width: 60px;
   height: 75px;
-  background-image: url("/images/icons/kkal.svg");
+  background-image: url("./images/icons/kkal.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top center;
