--- a/src/scss/base/fonts.scss
+++ b/src/scss/base/fonts.scss
@@ -1,71 +1,71 @@
 @font-face {
   font-family: 'Lifehack';
-  src: url('/fonts/Lifehack-Medium.eot');
-  src: url('/fonts/Lifehack-Medium.eot?#iefix') format('embedded-opentype'),
-      url('/fonts/Lifehack-Medium.woff2') format('woff2'),
-      url('/fonts/Lifehack-Medium.woff') format('woff'),
-      url('/fonts/Lifehack-Medium.ttf') format('truetype'),
-      url('/fonts/Lifehack-Medium.svg#Lifehack-Medium') format('svg');
+  src: url('./fonts/Lifehack-Medium.eot');
+  src: url('./fonts/Lifehack-Medium.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Lifehack-Medium.woff2') format('woff2'),
+      url('./fonts/Lifehack-Medium.woff') format('woff'),
+      url('./fonts/Lifehack-Medium.ttf') format('truetype'),
+      url('./fonts/Lifehack-Medium.svg#Lifehack-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gagalin';
-  src: url('/fonts/Gagalin-Regular.eot');
-  src: url('/fonts/Gagalin-Regular.eot?#iefix') format('embedded-opentype'),
-      url('/fonts/Gagalin-Regular.woff2') format('woff2'),
-      url('/fonts/Gagalin-Regular.woff') format('woff'),
-      url('/fonts/Gagalin-Regular.ttf') format('truetype'),
-      url('/fonts/Gagalin-Regular.svg#Gagalin-Regular') format('svg');
+  src: url('./fonts/Gagalin-Regular.eot');
+  src: url('./fonts/Gagalin-Regular.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Gagalin-Regular.woff2') format('woff2'),
+      url('./fonts/Gagalin-Regular.woff') format('woff'),
+      url('./fonts/Gagalin-Regular.ttf') format('truetype'),
+      url('./fonts/Gagalin-Regular.svg#Gagalin-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Ubuntu';
-  src: url('/fonts/Ubuntu-Light.eot');
-  src: url('/fonts/Ubuntu-Light.eot?#iefix') format('embedded-opentype'),
-      url('/fonts/Ubuntu-Light.woff2') format('woff2'),
-      url('/fonts/Ubuntu-Light.woff') format('woff'),
-      url('/fonts/Ubuntu-Light.ttf') format('truetype'),
-      url('/fonts/Ubuntu-Light.svg#Ubuntu-Light') format('svg');
+  src: url('./fonts/Ubuntu-Light.eot');
+  src: url('./fonts/Ubuntu-Light.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Ubuntu-Light.woff2') format('woff2'),
+      url('./fonts/Ubuntu-Light.woff') format('woff'),
+      url('./fonts/Ubuntu-Light.ttf') format('truetype'),
+      url('./fonts/Ubuntu-Light.svg#Ubuntu-Light') format('svg');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Ubuntu';
-  src: url('/fonts/Ubuntu-Medium.eot');
-  src: url('/fonts/Ubuntu-Medium.eot?#iefix') format('embedded-opentype'),
-      url('/fonts/Ubuntu-Medium.woff2') format('woff2'),
-      url('/fonts/Ubuntu-Medium.woff') format('woff'),
-      url('/fonts/Ubuntu-Medium.ttf') format('truetype'),
-      url('/fonts/Ubuntu-Medium.svg#Ubuntu-Medium') format('svg');
+  src: url('./fonts/Ubuntu-Medium.eot');
+  src: url('./fonts/Ubuntu-Medium.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Ubuntu-Medium.woff2') format('woff2'),
+      url('./fonts/Ubuntu-Medium.woff') format('woff'),
+      url('./fonts/Ubuntu-Medium.ttf') format('truetype'),
+      url('./fonts/Ubuntu-Medium.svg#Ubuntu-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Ubuntu';
-  src: url('/fonts/Ubuntu.eot');
-  src: url('/fonts/Ubuntu.eot?#iefix') format('embedded-opentype'),
-      url('/fonts/Ubuntu.woff2') format('woff2'),
-      url('/fonts/Ubuntu.woff') format('woff'),
-      url('/fonts/Ubuntu.ttf') format('truetype'),
-      url('/fonts/Ubuntu.svg#Ubuntu') format('svg');
+  src: url('./fonts/Ubuntu.eot');
+  src: url('./fonts/Ubuntu.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Ubuntu.woff2') format('woff2'),
+      url('./fonts/Ubuntu.woff') format('woff'),
+      url('./fonts/Ubuntu.ttf') format('truetype'),
+      url('./fonts/Ubuntu.svg#Ubuntu') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Ubuntu';
-  src: url('/fonts/Ubuntu-Bold.eot');
-  src: url('/fonts/Ubuntu-Bold.eot?#iefix') format('embedded-opentype'),
-      url('/fonts/Ubuntu-Bold.woff2') format('woff2'),
-      url('/fonts/Ubuntu-Bold.woff') format('woff'),
-      url('/fonts/Ubuntu-Bold.ttf') format('truetype'),
-      url('/fonts/Ubuntu-Bold.svg#Ubuntu-Bold') format('svg');
+  src: url('./fonts/Ubuntu-Bold.eot');
+  src: url('./fonts/Ubuntu-Bold.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Ubuntu-Bold.woff2') format('woff2'),
+      url('./fonts/Ubuntu-Bold.woff') format('woff'),
+      url('./fonts/Ubuntu-Bold.ttf') format('truetype'),
+      url('./fonts/Ubuntu-Bold.svg#Ubuntu-Bold') format('svg');
   font-weight: bold;
   font-style: normal;
 }
