--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -80,7 +80,7 @@
     display: inline-block;
     width: 12px;
     height: 11px;
-    background-image: url("./images/icons/phone.svg");
+    background-image: url("../images/icons/phone.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
