--- a/src/scss/sections/buy.scss
+++ b/src/scss/sections/buy.scss
@@ -1,5 +1,5 @@
 .buy {
-  background-image: url("./images/buy-bg.jpg");
+  background-image: url("../images/buy-bg.jpg");
 }
 
 .buy__title {
@@ -223,7 +223,7 @@
 }
 
 .buy__checkbox:checked+.buy__label-checkbox::before {
-  background-image: url("./images/checkbox.png");
+  background-image: url("../images/checkbox.png");
   background-size: 11px 9px;
   background-position: center center;
   background-repeat: no-repeat;
